# it-asset-manager-backend

./: .gitignore  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  render.yaml  schemas.py  seed.py
routers/: assets.py  tickets.py  users.py
scripts/: seed_data.py
tests/: conftest.py  helpers.py  test_assets.py  test_auth.py  test_schemas.py  test_tickets_and_users.py
